--- a/rust_crawl/Cargo.toml
+++ b/rust_crawl/Cargo.toml
@@ -12,6 +12,8 @@ crossbeam = "0.8.1"
 dashmap = {version = "4.0.2", features = ["serde"]}
 num_cpus = "1.13.0"
 parking_lot = {version = "0.11.2", features = ["serde"]}
+public-ip = "0.2.1"
+rand = "0.8.4"
 rayon = "1.5.1"
 regex = "1.5.4"
 # reqwest = "0.11.6"
