--- a/rust_crawl/Cargo.toml
+++ b/rust_crawl/Cargo.toml
@@ -12,8 +12,12 @@ version = "0.1.0"
 [dependencies]
 anyhow = "1.0.44"
 async-scoped = {version = "0.7.0", features = ["use-tokio"]}
+bincode = "1.3.3"
 crossbeam = "0.8.1"
+ctrlc = "3.2.1"
 dashmap = {version = "4.0.2", features = ["serde"]}
+flexbuffers = "2.0.0"
+fs_extra = "1.2.0"
 http = "0.2.5"
 hyper = "0.14.13"
 num_cpus = "1.13.0"
@@ -24,9 +28,12 @@ rayon = "1.5.1"
 regex = "1.5.4"
 # reqwest = "0.11.6"
 reqwest = {version = "0.11.6", features = ["blocking"]}
+rmp-serde = "0.15.5"
+ron = "0.7.0"
 scraper = "0.12.0"
 select = "0.5.0"
 serde = {version = "1.0.130", features = ["derive", "rc"]}
+serde-pickle = "1.1.0"
 serde_json = "1.0.68"
 static_init = "1.0.1"
 structopt = "0.3.25"
