--- a/Pipfile
+++ b/Pipfile
@@ -7,16 +7,14 @@ name = "pypi"
 scrapy = "*"
 textblob = "*"
 polyglot = "*"
-# pyicu = "*"
-# pycld2 = "*"
 beautifulsoup4 = "*"
 joblib = "*"
 orjson = "*"
 tqdm = "*"
 pandas = "*"
-# pandas = "*"
-# pandas = "*"
 pytest = "*"
+scikit-learn = "*"
+"ray[tune]" = "*"
 
 [dev-packages]
 
