added supoort for better training data

--- a/Pipfile
+++ b/Pipfile
@@ -18,8 +18,23 @@ mlflow = "1.21.0"
 xgboost = "1.5.1"
 plotly = "5.4.0"
 scikit-learn = "1.0.1"
+# scrapy = "*"
+# textblob = "*"
+# polyglot = "*"
+# beautifulsoup4 = "*"
+# joblib = "*"
+# orjson = "*"
+# tqdm = "*"
+# pandas = "*"
+# pytest = "*"
+# matplotlib = "*"
+# mlflow = "*"
+# xgboost = "*"
+# plotly = "*"
+jupyter = "*"
+# scikit-learn = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.9.7"
+python_version = "3.9.9"
