--- a/rust_crawl/Cargo.toml
+++ b/rust_crawl/Cargo.toml
@@ -26,7 +26,6 @@ public-ip = "0.2.1"
 rand = "0.8.4"
 rayon = "1.5.1"
 regex = "1.5.4"
-# reqwest = "0.11.6"
 reqwest = {version = "0.11.6", features = ["blocking"]}
 rmp-serde = "0.15.5"
 ron = "0.7.0"
@@ -40,3 +39,4 @@ structopt = "0.3.25"
 tokio = { version = "1.12.0", features = ["full"] }
 # tokio = "1.12.0"
 url = "2.2.2"
+pyo3 = {version = "0.15.0", features = ["auto-initialize"]}
