increased stack size, renamed file, updated python deps

--- a/Pipfile
+++ b/Pipfile
@@ -20,24 +20,10 @@ plotly = "5.4.0"
 scikit-learn = "1.0.1"
 url_classifier = { path = ".", editable = true }
 numpy = "1.21.4"
-# scrapy = "*"
-# textblob = "*"
-# polyglot = "*"
-# beautifulsoup4 = "*"
-# joblib = "*"
-# orjson = "*"
-# tqdm = "*"
-# pandas = "*"
-# pytest = "*"
-# matplotlib = "*"
-# mlflow = "*"
-# xgboost = "*"
-# plotly = "*"
-jupyter = "*"
-# scikit-learn = "*"
-# numpy = "*"
-fastparquet = "*"
-pyarrow = "*"
+fastparquet = "0.7.2"
+pyarrow = "6.0.1"
+icecream = "2.1.1"
+jupyter = "1.0.0"
 
 [dev-packages]
 
