--- a/rust_crawl/Cargo.toml
+++ b/rust_crawl/Cargo.toml
@@ -40,3 +40,4 @@ tokio = { version = "1.12.0", features = ["full"] }
 # tokio = "1.12.0"
 url = "2.2.2"
 pyo3 = {version = "0.15.0", features = ["auto-initialize"]}
+lingua = "1.3.2"
