--- a/rust_crawl/Cargo.toml
+++ b/rust_crawl/Cargo.toml
@@ -41,3 +41,4 @@ tokio = { version = "1.12.0", features = ["full"] }
 url = "2.2.2"
 pyo3 = {version = "0.15.0", features = ["auto-initialize"]}
 lingua = "1.3.2"
+itertools = "0.10.1"
